tests/fixtures/invalid/indexed_equality.gcl
// #810: `==`/`!=` on indexed operands must be rejected at check time —
// the runtime has no element-wise equality, so accepting this statically
// would guarantee a runtime error. (Element-wise broadcasting: #809.)
index Case = { A, B };

node actual: Length[Case] = { Case.A: 1.0 m, Case.B: 2.0 m };
node expected: Length[Case] = { Case.A: 1.0 m, Case.B: 2.5 m };

node same: Bool = @actual == @expected;

assert all_equal = @actual == @expected;
